Update NoLoophole.java